30_applications/storage/opencloud_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud-server
  namespace: storage
  labels:
    app.kubernetes.io/name: "opencloud"
    app.kubernetes.io/instance: "opencloud"
    app.kubernetes.io/component: "server"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: http
  selector:
    app.kubernetes.io/name: "opencloud"
    app.kubernetes.io/instance: "opencloud"
    app.kubernetes.io/component: "server"
